tests/NormalTests/paczka1/fuzzy1/32269549.err
Error in line 11: dO8 A930 62,6
Error in line 18: uQAFEsww3Zj A930 23,14
Error in line 25: wonTb9IzkeN A40 59,5
Error in line 32: wonTb9IzkeN A40 47,2
Error in line 33: wonTb9IzkeN A484 52,1
